--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/gabime/spdlog.git
 [submodule "Dix/Vendor/ImGui"]
 	path = Dix/Vendor/ImGui
-	url = https://github.com/TheCherno/imgui.git
+	url = https://github.com/1victor1ivanov1/imgui.git
